# NimblePDF

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh
assets/icon/: NimblePDF.hvif  app_icon.rdef.snippet
core/: CMakeLists.txt  Document.cpp  Document.h
docs/: STYLE_GUIDE.md
kevinnotes/: KEVREXOS_PORT_ANALYSIS.md  MULTIPLATFORM_PORT_PLAN.md  PRE_RELEASE_REVIEW.md  pre_release_findings.json
package/: PackageInfo  build-hpkg.sh
qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
scripts/: checkstyle-nimblepdf.py  install-hooks.sh
scripts/hooks/: pre-commit
source/: Makefile
source/haiku/: AnnotAppearance.cpp  AnnotAppearance.h  AnnotWriter.cpp  AnnotWriter.h  Annotation.cpp  Annotation.h  AnnotationRenderer.cpp  AnnotationRenderer.h  AnnotationWindow.cpp  AnnotationWindow.h  AttachmentView.cpp  AttachmentView.h  BeFontEncoding.cpp  BeFontEncoding.h  BePDF.h  BePDF.rdef  BeSplashOutputDev.cpp  BeSplashOutputDev.h  BepdfApplication.cpp  BepdfApplication.h  BitmapPool.cpp  BitmapPool.h  CachedPage.cpp  CachedPage.h  DisplayCIDFonts.cpp  DisplayCIDFonts.h  EmbeddedFileSpec.cpp  EmbeddedFileSpec.h  EntryChangedMonitor.cpp  EntryChangedMonitor.h  FileInfoWindow.cpp  FileInfoWindow.h  FileSpec.cpp  FileSpec.h  FindTextWindow.cpp  FindTextWindow.h  History.cpp  History.h  LayoutUtils.cpp  LayoutUtils.h  (+41 more)
source/haiku/utils/: Thread.cpp  (+5 more)
source/locales/: ca.catkeys  cs.catkeys  de.catkeys  el.catkeys  en.catkeys  en_AU.catkeys  en_GB.catkeys  es.catkeys  fi.catkeys  fr.catkeys  fur.catkeys  hi.catkeys  hr.catkeys  id.catkeys  it.catkeys  ja.catkeys  nl.catkeys  pl.catkeys  pt.catkeys  pt_BR.catkeys  ro.catkeys  ru.catkeys  sv.catkeys  th.catkeys  tr.catkeys  uk.catkeys
